--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chaos-mesh-chaos-mesh-datasource",
-  "version": "1.0.0",
+  "name": "g1eny0ung-chaos-mesh-datasource",
+  "version": "1.1.1",
   "description": "Chaos Mesh Datasource",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
@@ -14,14 +14,17 @@
     "@grafana/data": "^7.0.0",
     "@grafana/toolkit": "^7.0.0",
     "@grafana/ui": "^7.0.0",
-    "@types/lodash": "latest",
     "@testing-library/jest-dom": "5.4.0",
-    "@testing-library/react": "^10.0.2"
+    "@testing-library/react": "^10.0.2",
+    "@types/lodash": "latest"
   },
   "engines": {
     "node": ">=12"
   },
   "resolutions": {
     "rxjs": "6.6.3"
+  },
+  "dependencies": {
+    "@grafana/runtime": "^7.4.2"
   }
 }
