--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "postinstall": "husky install",
     "lint-staged": "lint-staged"
   },
-  "dependencies": {
-    "@grafana/runtime": "^7.4.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@grafana/data": "^7.0.0",
+    "@grafana/runtime": "^7.4.2",
     "@grafana/toolkit": "^7.0.0",
     "@grafana/ui": "^7.0.0",
     "@testing-library/jest-dom": "5.4.0",
@@ -30,9 +29,6 @@
   },
   "engines": {
     "node": ">=12"
-  },
-  "resolutions": {
-    "rxjs": "6.6.3"
   },
   "lint-staged": {
     "*.(j|t)s?(x)": "prettier --write"
